--- a/Akizuki.html
+++ b/Akizuki.html
@@ -64,7 +64,7 @@
     </div>
     <x3d id='x3dElement' showStat='false' showLog='false' style='width:100%; height:100%; border:0; margin:0; padding:0;'>
       <scene>
-          
+          <directionalLight id="directional" direction='0 0 1' on ="TRUE" intensity='1.0' shadowIntensity='0.0'> </directionalLight> 
           <navigationInfo id="head" headlight='true' type='"EXAMINE"'>  </navigationInfo> 
           <Inline nameSpaceName="Akizuki" mapDEFToID="true" onclick='redNose();' url="Akizuki/Akizuki.x3d" />
       </scene>
