--- a/Box.html
+++ b/Box.html
@@ -9,7 +9,7 @@
     <style>.x3dom-logContainer { bottom: 0px; position: absolute; }
     </style>
   </head>
-  <body style='width:100%; height:100%; border:0; margin:0; padding:0;'>
+  <body style='width:100%; height:100%; border:0; margin:0; padding:0;border: none;'>
     <x3d id='x3dElement' showStat='false' showLog='false' style='width:100%; height:100%; border:0; margin:0; padding:0;'>
       <scene>
           <directionalLight id="directional" direction='0 0 1' on ="TRUE" intensity='1.0' shadowIntensity='0.0'> </directionalLight> 
