--- a/VR/sample_固定尺寸.html
+++ b/VR/sample_固定尺寸.html
@@ -26,7 +26,7 @@
         dragMode: true,
         scenesArr: [
             //todo:注意修改视频路径，需要保证播放页面与视频属于同一域名下
-            {sceneId: "v1", sceneName: "赛车", sceneFilePath: "./video/960p.mp4", sceneType: "Video"}
+            {sceneId: "v1", sceneName: "赛车", sceneFilePath: "http://qj.ddmer.com/video/video-4096x2048.webm", sceneType: "Video"}
         ],
         //播放器不支持全景播放回调
         errorCallBack: function (e) {
