--- a/VR/sample_移动端开启陀螺仪.html
+++ b/VR/sample_移动端开启陀螺仪.html
@@ -29,8 +29,8 @@
             //todo:注意修改视频路径，需要保证播放页面与视频属于同一域名下
             {
                 sceneId: "v1",
-                sceneName: "赛车",
-                sceneFilePath: "./video/960p.mp4",
+                sceneName: "VR",
+                sceneFilePath: "../media/HMS Belfast VR Experience.mp4",
                 sceneType: "Video",
                 isVideoAutoPlay: true  //todo:注意isVideoAutoPlay 是H5 模式下的播放属性，不适用于移动端
             }
